force-app/main/default/objects/Affected_Customer__c/Affected_Customer__c.object-meta.xml
<CustomObject>
    <label>Affected Customer</label>
    <nameField>
        <label>Affected Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affected Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>