force-app/main/default/objects/Affected_Customer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
                <default>true</default>
                <label>Primary Contact</label>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>