force-app/main/default/objects/Affected_Customer__c/fields/Incident_Id_fx__c.field-meta.xml
<CustomField>
    <fullName>Incident_Id_fx__c</fullName>
    <formula>uom_Incident__r.Incident_Id_Link__c</formula>
    <label>Incident Id</label>
    <type>Text</type>
</CustomField>