force-app/main/default/objects/Affected_Customer__c/fields/Incident_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notifications__c</fullName>
    <formula>TEXT(uom_Incident__r.Incident_Notifications__c)</formula>
    <label>Incident Notifications</label>
    <type>Text</type>
</CustomField>