force-app/main/default/objects/Affected_Customer__c/fields/Incident_Sync__c.field-meta.xml
<CustomField>
    <fullName>Incident_Sync__c</fullName>
    <formula>IF(
uom_Incident_Status__c            = TEXT(uom_Incident__r.Status) &amp;&amp;
BLANKVALUE(uom_Estimated_assessment_date__c, FROMUNIXTIME(0))  = BLANKVALUE(uom_Incident__r.uom_Estimated_assessment_date__c, FROMUNIXTIME(0)) &amp;&amp;
BLANKVALUE(uom_Estimated_restoration_date__c, FROMUNIXTIME(0))  = BLANKVALUE(uom_Incident__r.uom_Estimated_restoration_date__c, FROMUNIXTIME(0)),
&apos;Synchronised&apos;,
&apos;Out of Sync&apos;)</formula>
    <label>Incident Sync</label>
    <type>Text</type>
</CustomField>