force-app/main/default/objects/Affected_Customer__c/fields/Last_Message_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Channel__c</fullName>
    <label>Last Message Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>