force-app/main/default/objects/Affected_Customer__c/fields/MC_Sync__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync__c</fullName>
    <label>MC Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync to MC</fullName>
            </value>
            <value>
                <fullName>Sync to MC (Multi Incident)</fullName>
            </value>
            <value>
                <fullName>ETA Updated</fullName>
            </value>
            <value>
                <fullName>ETR Updated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>