force-app/main/default/objects/Affected_Customer__c/fields/MC_Sync_Queue__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Queue__c</fullName>
    <label>MC Sync Queue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>