force-app/main/default/objects/Affected_Customer__c/fields/Multi_Incident__c.field-meta.xml
<CustomField>
    <fullName>Multi_Incident__c</fullName>
    <formula>TEXT(uom_Affected_Market_Identifier__r.Multi_Incident__c)</formula>
    <label>Multi-Incident Mode</label>
    <type>Text</type>
</CustomField>