force-app/main/default/objects/Affected_Customer__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <formula>uom_Affected_Market_Identifier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMI</label>
    <type>Text</type>
</CustomField>