force-app/main/default/objects/Affected_Customer__c/fields/Notif_Duplication_Note__c.field-meta.xml
<CustomField>
    <fullName>Notif_Duplication_Note__c</fullName>
    <label>Notification Duplication Notes</label>
    <type>TextArea</type>
</CustomField>