force-app/main/default/objects/Affected_Customer__c/fields/Number_of_Emails_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_Clicked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Emails Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>