force-app/main/default/objects/Affected_Customer__c/fields/Total_Number_of_Notification_Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Notification_Undelivered__c</fullName>
    <formula>Number_of_SMSs_Undelivered__c + Number_of_Emails_Undelivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Notification Undelivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>