force-app/main/default/objects/Affected_Customer__c/fields/Total_Number_of_Notifications_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Notifications_Delivered__c</fullName>
    <formula>Number_of_SMSs_Delivered__c + Number_of_Emails_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Notifications Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>