force-app/main/default/objects/Affected_Customer__c/fields/Total_Number_of_SMSs__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_SMSs__c</fullName>
    <formula>Number_of_SMSs_Sent__c  +  Number_of_SMSs_Delivered__c  +  Number_of_SMSs_Undelivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of SMSs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>