force-app/main/default/objects/Affected_Customer__c/fields/uom_Aff_NMI_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_Aff_NMI_Status__c</fullName>
    <label>Affected Market Id Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>