force-app/main/default/objects/Affected_Customer__c/fields/uom_Affected_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>uom_Affected_Market_Identifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Market Identifier</label>
    <referenceTo>Affected_Market_Identifier__c</referenceTo>
    <relationshipLabel>Affected Customers</relationshipLabel>
    <relationshipName>Affected_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>