force-app/main/default/objects/Affected_Customer__c/fields/uom_Business_Customer__c.field-meta.xml
<CustomField>
    <fullName>uom_Business_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please verify if not on contact</description>
    <label>Business Customer</label>
    <type>Checkbox</type>
</CustomField>