force-app/main/default/objects/Affected_Customer__c/fields/uom_Contact__c.field-meta.xml
<CustomField>
    <fullName>uom_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affected Customers</relationshipLabel>
    <relationshipName>Affected_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>