force-app/main/default/objects/Affected_Customer__c/fields/uom_Could_not_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>uom_Could_not_Contact_Reason__c</fullName>
    <label>Could not Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NMI not matched</fullName>
            </value>
            <value>
                <fullName>Preferred contact method not present</fullName>
            </value>
            <value>
                <fullName>No contact information available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>