force-app/main/default/objects/Affected_Customer__c/fields/uom_Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>uom_Customer_Street__c</fullName>
    <label>Customer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>