force-app/main/default/objects/Affected_Customer__c/fields/uom_Estimated_restoration_date__c.field-meta.xml
<CustomField>
    <fullName>uom_Estimated_restoration_date__c</fullName>
    <label>Estimated Time of Restoration (ETR)</label>
    <type>DateTime</type>
</CustomField>