force-app/main/default/objects/Affected_Customer__c/fields/uom_Has_ETA_Updated__c.field-meta.xml
<CustomField>
    <fullName>uom_Has_ETA_Updated__c</fullName>
    <description>Flags if the Estimated time for Assessment has changed or not</description>
    <formula>TEXT(uom_Estimated_assessment_date__c) != TEXT(uom_Incident__r.uom_Estimated_assessment_date__c)</formula>
    <label>ETA Updated</label>
    <type>Checkbox</type>
</CustomField>