force-app/main/default/objects/Affected_Customer__c/fields/uom_Has_ETR_Updated__c.field-meta.xml
<CustomField>
    <fullName>uom_Has_ETR_Updated__c</fullName>
    <description>Flags if the estimated time for restoration has changed or not</description>
    <formula>TEXT(uom_Estimated_restoration_date__c) != TEXT(uom_Incident__r.uom_Estimated_restoration_date__c)</formula>
    <label>ETR Updated</label>
    <type>Checkbox</type>
</CustomField>