force-app/main/default/objects/Affected_Customer__c/fields/uom_Incident__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Affected Customers</relationshipLabel>
    <relationshipName>Affected_Customers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>