force-app/main/default/objects/Affected_Customer__c/fields/uom_Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident_Status__c</fullName>
    <label>Incident Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>