force-app/main/default/objects/Affected_Customer__c/fields/uom_Life_Support__c.field-meta.xml
<CustomField>
    <fullName>uom_Life_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please verify if not on contact</description>
    <label>Life support</label>
    <type>Checkbox</type>
</CustomField>