force-app/main/default/objects/Affected_Customer__c/fields/uom_Marketing_Cloud_Manual_Send__c.field-meta.xml
<CustomField>
    <fullName>uom_Marketing_Cloud_Manual_Send__c</fullName>
    <formula>IF(uom_Incident__r.uom_Start_Manual_Send__c = TRUE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cloud Manual Send</label>
    <type>Checkbox</type>
</CustomField>