force-app/main/default/objects/Affected_Customer__c/fields/uom_SupplyGuaranteeReason1__c.field-meta.xml
<CustomField>
    <fullName>uom_SupplyGuaranteeReason1__c</fullName>
    <formula>uom_Affected_Market_Identifier__r.SupplyGuaranteeReason1__c</formula>
    <label>Supply Guarantee Reason</label>
    <type>Text</type>
</CustomField>